Minor formatting change in Figure 4

--- a/trunk/doc/pubdesign/report.tex
+++ b/trunk/doc/pubdesign/report.tex
@@ -1212,7 +1212,7 @@ manually run job steps via a script or in a sub-shell spawned by \srun .
          \slurmctld\ requesting resources. 2. \slurmctld\ issues a response,
 	 with list of nodes and job step credential. 3. \srun\ opens a listen
 	 port for job IO connections, then sends a run job step
-	 request to \slurmd . 4. \slurmd initiates job step and connects
+	 request to \slurmd . 4. \slurmd\ initiates job step and connects
 	 back to \srun\ for stdout/err. }
 \label{connections}
 \end{figure}
