Make order of bibliography references to be order of citation (not alphabetical).

--- a/trunk/doc/pubdesign/report.tex
+++ b/trunk/doc/pubdesign/report.tex
@@ -1471,7 +1471,7 @@ integrate SLURM with STORM communications
 %\end{description}
 
 % make the bibliography
-\bibliographystyle{plain}
+\bibliographystyle{unsrt}
 \bibliography{project}
 
 % make the back cover page
