Major revisions for updated sinfo options and output formats.

--- a/trunk/doc/man/man1/sinfo.1
+++ b/trunk/doc/man/man1/sinfo.1
@@ -1,12 +1,12 @@
 .TH SINFO "1" "April 2003" "sinfo 0.1" "Slurm components"
 
 .SH "NAME"
-sinfo \- Used to view information of jobs located in the scheduling queue.
+sinfo \- Used to view information about Slurm nodes and partitions.
 
 .SH "SYNOPSIS"
 \fBsinfo\fR [\fIOPTIONS\fR...] 
 .SH "DESCRIPTION"
-\fBsinfo\fR is used to view partition and node status and information for a 
+\fBsinfo\fR is used to view partition and node information for a 
 system running SLURM. 
 
 .SH "OPTIONS"
@@ -15,28 +15,34 @@ system running SLURM.
 Print a help message describing the usage of \fBsinfo\fR.
 .TP
 \fB\-e\fR, \fB\-\-exact\fR
-If set, to not group node information on a single node unless their configurations are identical. By default cpu count, memory size, and disk space will be listed as a range for nodes with the same partition and state.
+If set, do not group node information on multiple nodes unless their 
+configurations to be reported are identical. Otherwise cpu count, 
+memory size, and disk space for nodes will be listed with the minimum 
+value followed by a "+" for nodes with the same partition and state 
+(e.g., "250+").
 .TP
-\fB\-i <time>\fR , \fB\-\-iterate <time>\fR
-Print the state on a periodic basis.
+\fB\-i <seconds>\fR , \fB\-\-iterate=<seconds>\fR
+Print the state on a periodic basis. 
+Sleep for the indicated number of seconds between reports.
 .TP
 \fB\-l\fR , \fB\-\-long\fR
-List more detailed information than normally provided.
+Print more detailed information.
 .TP
-\fB\-n <node>\fR , \fB\-\-node <node>\fR
-List information on the specified node(s).
+\fB\-n <nodes>\fR , \fB\-\-nodes=<nodes>\fR
+Print information only about the specified node(s). 
 .TP
-\fB\-t <state>\fR , \fB\-\-state <state>\fR
+\fB\-N\fR , \fB\-\-Node\fR
+Print information in a node-oriented format.
+The default is to print information in a partition-oriented format.
+.TP
+\fB\-t <state>\fR , \fB\-\-state=<state>\fR
 List nodes of a given state.
 .TP
-\fB\-\-summarize\fR
-List only a partition state summary. Do not show individual nodes.
+\fB\-s\fR , \fB\-\-summarize\fR
+List only a partition state summary with no node state details.
 .TP
-\fB\-p <partition>\fR, \fB\-\-partition <partition>\fR
-Display information about the specified partition.  
-If \fB-p\fR is used no arguments, all partitions will be displayed.
-If \fB-p\fR is used with a \fB-n\fR having no arguments, all the nodes of the 
-specified partition will be displayed.
+\fB\-p <partition>\fR, \fB\-\-partition=<partition>\fR
+Print information only about the specified partition.  
 .TP
 \fB\-\-usage\fR
 Dipaly brief description of commands and options.
@@ -45,12 +51,14 @@ Dipaly brief description of commands and options.
 Provide detailed event logging through program execution.
 .SH "ARGUMENTS"
 .TP
-\fBnode\fR
-The names of one or more comma separated nodes. Names may be specified using node range expressions.
-For example "linux[00-07]" would indicate eight nodes, "linux00" through "linux07".
+\fBnodes\fR
+The names of one or more comma separated nodes. Names may be specified 
+using node range expressions.
+For example "linux[00-07]" would indicate eight nodes, "linux00" 
+through "linux07".
 .TP
 \fBpartition\fR
-The names of one or more comma separated partitions.
+The name of one partition.
 .TP
 \fBstate\fR
 A valid node state. Possible values include: ALLOC, ALLOCATED, COMP, 
@@ -59,103 +67,130 @@ A "*" suffix may be appended to any of these states to search for
 nodes in the specified state which are not responding. 
 By default nodes in the specified state are reported whether they are 
 responding or not.
-.TP
-\fBtime\fR
-Number of seconds to wait between each iteration.
 .SH "OUTPUT"
 .TP
 \fBPARTITION\fR
-Name of the partition.
+Name of a partition. 
+Note that the suffix "*" identifies the default partition.
+.TP
+\fBAVAIL\fR
+Partition state, \fBUP\fR or \fBDOWN\fR.
 .TP
 \fBNODES\fR
 Count of nodes with this particular configuration.
 .TP
 \fBSTATE\fR
-State of the nodes. Note that the suffix "*" marks nodes that are presently 
-not responding.
+State of the nodes. Note that the suffix "*" identifies nodes 
+that are presently not responding.
 .TP
 \fBCPUS\fR
 Count of CPUs (processors) on these nodes.
 .TP
-\fBMEM\fR
+\fBMEMORY\fR
 Size of real memory in megabytes on these nodes.
 .TP
-\fBDISK\fR
+\fBTMP_DISK\fR
 Size of temporary disk space in megabytes on these nodes.
 .TP
-\fBNODES\fR
-Names of nodes with this particular configuration.
+\fBNODE_LIST\fR
+Names of nodes associated with this configuration/partition.
+.TP
+\fBMAX_TIME\fR
+Maximum time limit for any user job in minutes.
+\fBNONE\fR is used to identify partitions without a job time limit.
+.TP
+\fBJOB_SIZE\fR
+Minimum and maximum node count that can be allocated to any user job. 
+A single number indicates the minimum and maximum node count are the 
+same.
+.TP
+\fBROOT\fR
+Is the ability to allocate resources in this partition restricted to 
+user root, \fBYES\fR or \fBNO\fR.
+.TP
+\fBSHARE\fR
+Will jobs allocated resources in this partition share those resources.
+\fBNO\fR indicates resources are never shared. 
+\fBFORCE\fR indicates resources are always available to be shared.
+\fBYES\fR indicates resource may be shared or not per job's resource allocation.
+.TP
+\fBGROUPS\fR
+Resource allocations in this partition are restricted to the named groups.
+\fBALL\fR indicates that all groups may use this partition.
+
 .SH "EXAMPLES"
 .eo
-Report basic system configuration:
+Report basic node and partition configurations:
 .br
-# ./sinfo
+> sinfo
 .br
-PARTITION   NODES  STATE  CPUS MEMORY TMP_DISK  NODES
+PARTITION AVAIL NODES STATE  NODE_LIST
 .br
-----------------------------------------------------------
+------------------------------------------------------------
 .br
-debug          18  IDLE      2    128      512  dev[1-18]
+debug     UP        8 IDLE   adev[0-7]
 .br
-debug           2  DRAIN     2    128      512  dev[19-20]
+batch*    UP        2 ALLOC  adev[8-9]
 .br
-pbatch         60  ALLOC     2    128      512  dev[21-80]
+                    6 IDLE   adev[10-15]
 .br
-pbatch         19  IDLE      2    128      512  dev[81-99]
+ 
+.br
+Report partition summary information:
+.br
+> sinfo -s
+.br
+PARTITION AVAIL NODES NODE_LIST
+.br
+------------------------------------------------------------
+.br
+debug     UP        8 adev[0-7]
+.br
+batch*    UP        8 adev[8-15]
 .br
  
 .br
 Report more complete information about the partition debug:
 .br
-# ./sinfo --long --partition debug
+> sinfo --long --partition debug
 .br
-PARTITION INFORMATION
+PARTITION AVAIL NODES STATE MAX_TIME JOB_SIZE ROOT SHARE GROUPS NODE_LIST
 .br
-============================================================
+------------------------------------------------------------------------
 .br
-debug
-.br
-        current state     = UP
-.br
-        default partition = YES
-.br
-        total nodes       = 20
-.br
-        total cpus        = 40
-.br
-        max jobtime       = 30
-.br
-        max nodes/job     = 10
-.br
-        root only         = NO
-.br
-        share nodes       = NO
+debug     UP        8 IDLE      NONE     1-26 NO   NO    ALL    adev[0-7]
 .br
 
-.br
-        NODES  STATE  CPUS MEMORY TMP_DISK  NODES
-.br
-        ----------------------------------------------------
-.br
-           18  IDLE      2    128      512  dev[1-18]
-.br
-            2  DRAIN     2    128      512  dev[19-20]
-.br
-
-.br
-===========================================================+=
-.br
- 
 .br
 Report only those nodes that are in state DRAINED:
 .br
-# ./sinfo --state DRAINED
+> sinfo --state=DRAINED
 .br
-PARTITION   NODES  STATE  CPUS  MEMORY TMP_DISK  NODES
+PARTITION AVAIL NODES STATE  NODE_LIST
 .br
------------------------------------------------------------
+------------------------------------------------------------
 .br
-debug           2  DRAIN     2     128      512  dev[19-20]
+debug     UP        2 DRAIN  adev[6-7]
+.br
+
+.br
+Report node-oriented information with details and exact matches:
+.br
+> sinfo -Nel
+.br
+NODE_LIST  NODES PARTITION STATE  CPUS MEMORY TMP_DISK WEIGHT FEATURES
+.br
+----------------------------------------------------------------------
+.br
+adev[0-1]      2 debug     IDLE      2   3448    38536     16 (null)  
+.br
+adev[2,4-7]    5 debug     IDLE      2   3384    38536     16 (null)  
+.br
+adev3          1 debug     IDLE      2   3394    38536     16 (null)  
+.br
+adev[8-9]      2 batch     ALLOCATED 2    246    82306     16 (null)  
+.br
+adev[10-15]    6 batch     IDLE      2    246    82306     16 (null)  
 .ec
 
 .SH "COPYING"
